--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {erl_opts, [debug_info]}.
 {deps, [
-       {jiffy, {git, "https://github.com/davisp/jiffy.git"}},
-       {fast_xml, {git, "https://github.com/processone/fast_xml.git"}}
+       {jiffy, {git, "https://github.com/davisp/jiffy.git", {branch, master}}},
+       {exomler, {git, "https://github.com/erlangbureau/exomler.git", {branch, master}}}
 ]}.
