--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [
        {jiffy, {git, "https://github.com/davisp/jiffy.git", {branch, master}}},
+       {iconv, {git, "https://github.com/processone/iconv.git", {branch, master}}},
        {exomler, {git, "https://github.com/erlangbureau/exomler.git", {branch, master}}}
 ]}.
